massive overhaul with 5% deviation